--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/Index.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/Index.cshtml
@@ -62,7 +62,7 @@
                         <input type="hidden" id="tradeNameValue" value="@item.Name" />
                         <ul class="nav nav-tabs">
                             <li>
-                                <div class="btn btn-sm editTradeButton" data-toggle="modal" data-target="#myModal" value="@item.Name">
+                                <div class="btn btn-sm editTradeButton" onclick="javascript: onEditTrade()" data-toggle="modal" data-target="#myModal" value="@item.Name">
                                     Edit
                                 </div>
                             </li>
