--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/Reports.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/Reports.cshtml
@@ -3,17 +3,16 @@
     ViewBag.Title = "Performance";
 }
 
-<ul class="nav nav-tabs nav-justified">
-    <li><a href="@Url.Action("index")">Portfolio</a></li>
-    <li><a href="@Url.Action("CashFlow")">CashFlow</a></li>
-    <li><a href="@Url.Action("Reports")">Reports</a></li>
-</ul>
-
-<ul>
-    @foreach (var dt in Model.RecentReports)
-    {
-        <li>
-            @Html.ActionLink( dt, "LoadReport", new { ValuationDate=dt}, new {  target="_blank"})
-        </li>
-    }
-</ul>
+<div class="container">
+    @Html.Partial("AccountSummary")
+    <div class="row">
+        <ul>
+            @foreach (var dt in Model.RecentReports)
+            {
+                <li>
+                    @Html.ActionLink(dt, "LoadReport", new { ValuationDate = dt }, new { target = "_blank" })
+                </li>
+            }
+        </ul>
+    </div>
+</div>
