--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Content/InvestmentBuilderWeb.css
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Content/InvestmentBuilderWeb.css
@@ -77,3 +77,11 @@ right: 1em;
     margin-bottom:10px;
     box-sizing:border-box;
 }
+
+.investmentNavigator {
+    margin:5px;
+}
+
+.cashItemType {
+    margin:5px;
+}
