--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/ReceiptCashFlowItem.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/ReceiptCashFlowItem.cshtml
@@ -19,8 +19,11 @@
 <td>
     @Html.DisplayFor(item => item.Other)
 </td>
+@if (Model.IsTotal == false)
+{
 <td>
     <ul class="nav nav-tabs">
         <li><a href="@Url.Action("RemoveReceiptTransaction", "InvestmentRecord", Model)" class="btn btn-sm">Delete</a></li>
     </ul>
 </td>
+}
