--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/Shared/AccountPartial.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/Shared/AccountPartial.cshtml
@@ -16,10 +16,10 @@
         </button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
             <li role="presentation">
-                <a role="menuitem" href="@Url.Action("AddInvestmentAccount","InvestmentRecord")">Add Account</a>
+                <a role="menuitem" href="@Url.Action("AddInvestmentAccount","InvestmentAccount")">Add Account</a>
             </li>
             <li role="presentation">
-                <a role="menuitem" href="@Url.Action("ManageAccounts","InvestmentRecord")">Manage Accounts</a>
+                <a role="menuitem" href="@Url.Action("EditInvestmentAccount","InvestmentAccount")">Edit Account</a>
             </li>
         </ul>
     </li>
