--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/CreateTrade.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/CreateTrade.cshtml
@@ -52,6 +52,7 @@
             @Html.EditorFor(m => m.ManualPrice, new { @class = "form-control" })
         </div>
         <div class="form-group">
+            <a href="@Url.Action("Index", "InvestmentRecord")" class="btn btn-sm">Cancel</a>
             <input type="submit" value="Submit" class="btn btn-primary" />
         </div>
     }
