fix date time picker and fix dialogues that do not display when page first loaded

--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AccountSummary.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AccountSummary.cshtml
@@ -35,7 +35,15 @@
         </ul>
     </div>
     <div class="pull-right">
-        <a href="@Url.Action("BuildReport", "InvestmentRecord", new {target="_blank"})" class="btn btn-primary summaryButton">Build Report </a>
+        @if (ViewBag.EnableBuildReport == true)
+        {
+            <a href="@Url.Action("BuildReport", "InvestmentRecord", new {target="_blank"})" class="btn btn-primary summaryButton">Build Report </a>
+        }
+        else
+        {
+            <a href="@Url.Action("BuildReport", "InvestmentRecord", new {target="_blank"})" class="btn btn-primary summaryButton disabled">Build Report </a>
+        }
+        
     </div>
 </div>
 
