--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/EditTrade.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/EditTrade.cshtml
@@ -15,7 +15,12 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.TransactionDate)
-            @Html.EditorFor(m => m.TransactionDate, new { @class = "form-control" })
+            @Html.TextBox("TransactionDate", DateTime.Today.ToShortDateString(), new
+            {
+                @class = "form-control datetime",
+                onclick = "javascript:onDisplayDateTimePicker()",
+                onchange = "javascript:onDisplayDateTimePicker()"
+            })
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Quantity)
