--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AccountSummary.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AccountSummary.cshtml
@@ -3,6 +3,7 @@
     <li><a href="@Url.Action("index","InvestmentRecord")">Portfolio</a></li>
     <li><a href="@Url.Action("CreateTrade", "InvestmentRecord")">Add</a></li>
     <li><a href="@Url.Action("CashFlow","InvestmentRecord")">CashFlow</a></li>
+    <li><a href="@Url.Action("CashFlowAngular","InvestmentRecord")">CashFlowAngular</a></li>
     <li><a href="@Url.Action("Reports","InvestmentRecord")">Reports</a></li>
 </ul>
 
