added YTD to report. Converted CashFlow page to use angular

--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Content/InvestmentBuilderWeb.css
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Content/InvestmentBuilderWeb.css
@@ -92,3 +92,7 @@ right: 1em;
     padding:5px;
     margin-bottom:5px;
 }
+
+.nav, .pagination, .carousel, .panel-title a { 
+    cursor: pointer; 
+}
