--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Content/InvestmentBuilderWeb.css
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Content/InvestmentBuilderWeb.css
@@ -96,3 +96,13 @@ right: 1em;
 .nav, .pagination, .carousel, .panel-title a { 
     cursor: pointer; 
 }
+
+.showProgress {
+  position: absolute;
+  top: 10%;
+  left: 20%;
+  height:20%;
+  width: 50%;
+  background-color: #a6d4f6;
+  z-index: 100;
+}
