--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AccountSummary.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AccountSummary.cshtml
@@ -3,7 +3,6 @@
     <li><a href="@Url.Action("index","InvestmentRecord")">Portfolio</a></li>
     <li><a href="@Url.Action("CreateTrade", "InvestmentRecord")">Add</a></li>
     <li><a href="@Url.Action("CashFlow","InvestmentRecord")">CashFlow</a></li>
-    <li><a href="@Url.Action("CashFlowAngular","InvestmentRecord")">CashFlowAngular</a></li>
     <li><a href="@Url.Action("Reports","InvestmentRecord")">Reports</a></li>
 </ul>
 
@@ -36,19 +35,13 @@
         </ul>
     </div>
     <div class="pull-right">
-        @if (ViewBag.EnableBuildReport == true)
-        {
-            <a href="@Url.Action("BuildReport", "InvestmentRecord", new {target="_blank"})" class="btn btn-primary summaryButton">Build Report </a>
-        }
-        else
-        {
-            <a href="@Url.Action("BuildReport", "InvestmentRecord", new {target="_blank"})" class="btn btn-primary summaryButton disabled">Build Report </a>
-        }
-        
+        <div ng-show="cashFlow.canBuild == true" ng-click="cashFlow.BuildReport()" class="btn btn-primary summaryButton">Build Report </div>        
     </div>
 </div>
 
 @if (ViewBag.HasError == true)
 {
-    @Html.Partial("~/Views/InvestmentRecord/RaiseAlert.cshtml")
+    <div class="row">
+        @Html.Partial("~/Views/InvestmentRecord/RaiseAlert.cshtml")
+    </div>
 }
