--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AddTransaction.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AddTransaction.cshtml
@@ -1,49 +1,46 @@
-﻿@model InvestmentBuilderWeb.Models.TransactionModel
-
-<h3>@ViewBag.Title</h3>
-
-<div class="editor">
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-            
-        @Html.ValidationSummary(true, "Errors occured", new { @class = "text-danger" })
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.TransactionDate)
-            @Html.TextBox("TransactionDate", DateTime.Today.ToShortDateString(), new { @class = "form-control datetime",
-                                                          onclick = "javascript:onDisplayDateTimePicker()",
-                                                          onchange = "javascript:onDisplayDateTimePicker()"})
-            @Html.ValidationMessageFor(m => m.TransactionDate)
+﻿<div class="modal-header">
+    <h3 class="modal-title" id="modal-title">{{$transaction.title}}</h3>
+</div>
+<div class="modal-body" id="modal-body">
+    <form>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label>Transaction Date</label>
+                    <p class="input-group">
+                        <input type="text" name="transactionDate" class="form-control" uib-datepicker-popup="{{$transaction.format}}" ng-model="$transaction.dt" is-open="$transaction.datepicker.opened" datepicker-options="$transaction.dateOptions" ng-required="true" close-text="Close" alt-input-formats="$transaction.altInputFormats" />
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-default" ng-click="$transaction.openDatePicker()"><i class="glyphicon glyphicon-calendar"></i></button>
+                        </span>
+                    </p>
+                </div>
+            </div>
         </div>
-
         <div class="form-group">
             <label>Transaction Type</label>
-            @Html.DropDownList("ParameterType", null, new
-           {
-               @class = "form-control",
-               onchange = "javascript:asyncGetParameters()"
-           })
+            <select name="parameterType" class="form-control" ng-model="$transaction.SelectedParamType" ng-click="$transaction.changeParamType()">
+                <option ng-repeat="type in $transaction.ParamTypes">{{type}}</option>
+            </select>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(m => m.Parameter)
-            <div id="parameters">
-                @Html.DropDownList("DummyParameters", null, new { @class = "form-control" })
-            </div>
-            @Html.ValidationMessageFor(m => m.Parameter)
+            <label>Parameter</label>
+            <select name="parameter" class="form-control" ng-model="$transaction.SelectedParameter">
+                <option ng-repeat="type in $transaction.Parameters">{{type}}</option>
+            </select>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(m => m.Amount)
-            @Html.EditorFor(m => m.Amount, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Amount)
+            <label>Amount</label>
+            <input name="amount" type="number" class="form-control" ng-model="$transaction.Amount" />
         </div>
 
-        <div class="form-group">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close </button>
-            <input type="submit" value="Submit Changes" class="btn btn-primary" />
-        </div>
-    }
+    </form>
+</div>
+<div class="modal-footer">
+    <button class="btn btn-primary" type="button" ng-click="$transaction.ok()">OK</button>
+    <button class="btn btn-warning" type="button" ng-click="$transaction.cancel()">Cancel</button>
+</div>
 
- </div>
+
+   
