--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/CashFlow.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/CashFlow.cshtml
@@ -13,6 +13,7 @@
             this.receiptParamTypes = null;
             this.paymentParamTypes = null;
             this.progressCount = 0;
+            this.section = null;
             this.isBuilding = false;
             
             var progress;
@@ -22,10 +23,14 @@
 
             var onCheckStatus = function (response) {
                 this.progressCount = response.data.Progress;
-                this.isBuilding = response.data.IsBuilding;
-                if (this.isBuilding == false) {
+                
+                this.section = response.data.BuildSection;
+                if (this.isBuilding == true && response.data.IsBuilding == false) {
+                    this.isBuilding = response.data.IsBuilding;
                     $interval.cancel(progress);
                     progress = null;
+                    //now display a dialog to show any errors during the build
+
                 }
 
             }.bind(this);
@@ -57,7 +62,7 @@
             $http.get('CashFlowContents')
             .then(onLoadContents);
     
-            this.addDialog = function (title, paramTypes, updateMethod) {
+            this.addTransactionDialog = function (title, paramTypes, updateMethod) {
                 var modalInstance = $uibModal.open({
                     animation: true,
                     ariaLabelledBy: 'modal-title',
@@ -91,11 +96,11 @@
             }.bind(this);
 
             this.addReceipt = function () {
-                this.addDialog('receipt', this.receiptParamTypes, 'AddReceiptTransactionAngular');
+                this.addTransactionDialog('receipt', this.receiptParamTypes, 'AddReceiptTransactionAngular');
             }.bind(this);
 
             this.addPayment = function () {
-                this.addDialog('payment', this.paymentParamTypes, 'AddPaymentTransactionAngular');
+                this.addTransactionDialog('payment', this.paymentParamTypes, 'AddPaymentTransactionAngular');
             };
 
             this.deleteTransaction = function (transaction) {
@@ -251,6 +256,12 @@
             $transaction.changeParamType();
         }
 
+        function ReportCompletion($uibModalInstance, errors) {
+            var $report = this;
+            $report.succceded = errors.length > 0;
+            $report.errors = errors;
+        };
+
         //inject everything angular needs here
         angular.module('InvestmentRecord', ['ui.bootstrap']);
 
@@ -270,11 +281,12 @@
 <div class="container">
     <div ng-app="InvestmentRecord">
         <div ng-controller="CashFlowController as cashFlow" id="cashflowContainer">
-            <div ng-show="cashFlow.isBuilding == true" class="showProgress">
-                <h4><em>Building Report</em></h4>
+            <div ng-show="cashFlow.isBuilding == true" class="showProgress" ng-cloak>
+                <h4><em>Building Report. please wait...</em></h4>
+                <h5 ng-bind="cashFlow.section"></h5>
                 <uib-progressbar animate="false" value="cashFlow.progressCount" type="success"><b>{{cashFlow.progressCount}}%</b></uib-progressbar>
             </div>
-            <div ng-class="{enabled:cashFlow.isBuilding == false, disabled:cashFlow.isBuilding == true}">
+            <div ng-class="{hideCashFlow : cashFlow.isBuilding == true, showCashFlow : cashFlow.isBuilding == false}" ng-cloak>
                 @Html.Partial("~/Views/InvestmentRecord/AccountSummary.cshtml")
                 <div ng-repeat="cashFlowItem in cashFlow.cashFlows" class="row cashFlowBlock">
                     <div class="panel panel-default investmentSummary">
