--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/Shared/_Layout.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/angular")
     @Scripts.Render("~/bundles/InvestmentBuilderWeb")
     @RenderSection("scripts", required: false)
 </body>
