improvements to charting in pdf report.

--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/Shared/_LayoutInvestmentRecord.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/Shared/_LayoutInvestmentRecord.cshtml
@@ -19,8 +19,8 @@
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                @*@Html.Partial("_LoginPartial")*@
-                @Html.Partial("_LoginPartialTestUser") 
+                @Html.Partial("_LoginPartial")
+                @*@Html.Partial("_LoginPartialTestUser")*@ 
             </div>
         </div>
     </div>
