--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AccountSummary.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/AccountSummary.cshtml
@@ -1,6 +1,7 @@
 ﻿
 <ul id="mainTab" class="nav nav-tabs nav-justified">
     <li><a href="@Url.Action("index","InvestmentRecord")">Portfolio</a></li>
+    <li><a href="@Url.Action("indexAngular","InvestmentRecord")">Portfolio Angular</a></li>
     <li><a href="@Url.Action("CreateTrade", "InvestmentRecord")">Add</a></li>
     <li><a href="@Url.Action("CashFlow","InvestmentRecord")">CashFlow</a></li>
     <li><a href="@Url.Action("Reports","InvestmentRecord")">Reports</a></li>
