--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/CashFlow.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/CashFlow.cshtml
@@ -24,7 +24,7 @@
                                     <li><p class="navbar-text">Valuation Date: {{cashFlowItem.ValuationDate}}</p> </li>
                                     <li><p class="navbar-text">Total: {{cashFlowItem.ReceiptsTotal}}</p></li>
                                     <li>
-                                        <div ng-show="$index == 0" ng-click="cashFlow.addReceipt()" class="btn btn-default" data-toggle="modal" data-target="#myModal">Add Receipt</div>
+                                        <div ng-show="$index == 0" ng-click="cashFlow.addReceipt()" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Add Receipt</div>
                                     </li>
                                 </ul>
                             </div>
@@ -85,7 +85,7 @@
                                     <li><p class="navbar-text">Valuation Date: {{cashFlowItem.ValuationDate}}</p> </li>
                                     <li><p class="navbar-text">Total: {{cashFlowItem.PaymentsTotal}}</p></li>
                                     <li>
-                                        <div ng-show="$index == 0" ng-click="cashFlow.addPayment()" class="btn btn-default" data-toggle="modal" data-target="#myModal">Add Payment</div>
+                                        <div ng-show="$index == 0" ng-click="cashFlow.addPayment()" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Add Payment</div>
                                     </li>
                                 </ul>
                             </div>
