--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/CreateTrade.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/CreateTrade.cshtml
@@ -1,66 +1,59 @@
-﻿@model InvestmentBuilderWeb.Models.TradeItemModel
-
-<h2>Add Trade</h2>
+﻿
+<h2>Add Investment</h2>
 
 <p/>
 <div class="editor">
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
+    <div ng-app="InvestmentRecord" ng-controller="AddTradeController as addTrade">
+        <form name="AddInvestment" role="form">
+            <div class="form-group">
+                <label>Name</label>
+                <input class="form-control" ng-model="addTrade.Name" placeholder="name of investment" />
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label>Transaction Date</label>
+                        <p class="input-group">
+                            <input type="text" name="transactionDate" class="form-control" uib-datepicker-popup="{{addTrade.format}}" ng-model="addTrade.dt" is-open="addTrade.datepicker.opened" datepicker-options="addTrade.dateOptions" ng-required="true" close-text="Close" alt-input-formats="addTrade.altInputFormats" />
+                            <span class="input-group-btn">
+                                <button type="button" class="btn btn-default" ng-click="addTrade.openDatePicker()"><i class="glyphicon glyphicon-calendar"></i></button>
+                            </span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label>Quantity</label>
+                <input class="form-control" type="number" ng-model="addTrade.Quantity" placeholder="amount bought" />
+            </div>
 
-        //<form role="form">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(m => m.Name)
-            @Html.EditorFor(m => m.Name)
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.TransactionDate)
-            @Html.TextBox("TransactionDate", DateTime.Today.ToShortDateString(), new
-                   {
-                       @class = "form-control datetime",
-                       onclick = "javascript:onDisplayDateTimePicker()",
-                       onchange = "javascript:onDisplayDateTimePicker()"
-                   })
+            <div class="form-group">
+                <label>Symbol</label>
+                <input class="form-control" ng-model="addTrade.Symbol" placeholder="ticker symbol" />
+            </div>
+            <div class="form-group">
+                <label>Exchange</label>
+                <input class="form-control" ng-model="addTrade.Exchange" placeholder="optional" />
+            </div>
+            <div class="form-group">
+                <label>Investment Currency</label>
+                <input class="form-control" ng-model="addTrade.Currency" />
+            </div>
+            <div class="form-group">
+                <label>Scaling Factor</label>
+                <input class="form-control" type="number" ng-model="addTrade.ScalingFactor" />
+            </div>
 
+            <div class="form-group">
+                <label>Total Cost</label>
+                <input class="form-control" type="number" ng-model="addTrade.TotalCost" />
+            </div>
 
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Quantity)
-            @Html.EditorFor(m => m.Quantity, new { @class = "form-control" })
-        </div>
-
-        <input type="hidden" name="Action" value="BUY" />
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.Symbol)
-            @Html.EditorFor(m => m.Symbol, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Exchange)
-            @Html.EditorFor(m => m.Exchange, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Currency)
-            @Html.EditorFor(m => m.Currency, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.ScalingFactor)
-            @Html.EditorFor(m => m.ScalingFactor, new { @class = "form-control" })
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.TotalCost)
-            @Html.EditorFor(m => m.TotalCost, new { @class = "form-control" })
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.ManualPrice)
-            @Html.EditorFor(m => m.ManualPrice, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            <a href="@Url.Action("Index", "InvestmentRecord")" class="btn btn-sm">Cancel</a>
-            <input type="submit" value="Submit" class="btn btn-primary" />
-        </div>
-    }
+            <div class="form-group">
+                <button class="btn btn-primary" type="button" ng-click="addTrade.submitTrade()">Submit</button>
+                <button class="btn btn-warning" type="button" ng-click="addTrade.cancel()">Cancel</button>
+            </div>
+        </form>
+    </div>
 </div>
+
