--- a/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/Index.cshtml
+++ b/InvestmentBuilderWeb/InvestmentBuilderWeb/Views/InvestmentRecord/Index.cshtml
@@ -1,82 +1,13 @@
-﻿@model IEnumerable<InvestmentBuilderWeb.Models.CompanyDataModel>
+﻿
 @{
     ViewBag.Title = "InvestmentRecordView";
 }
 <div class="container">
-    @Html.Partial("~/Views/InvestmentRecord/AccountSummary.cshtml")
-
-    <p />
-
-    @if (ViewBag.HasError == true)
-    {
-        <input type="hidden" id="errorType" value="1"/>
-    }
-
-    <table class="table table-striped table-condensed">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Quantity</th>
-                <th>Last Brought</th>
-                <th>Avg.Price Paid</th>
-                <th>Total Cost</th>
-                <th>Current Price</th>
-                <th>Net Value</th>
-                <th>Profit/Loss</th>
-                <th>Month Change%</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            @foreach (var item in Model)
-    {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Quantity)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.LastBrought)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.AveragePricePaid)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.TotalCost)
-                    </td>
-                    <td>
-                        @using (Html.BeginForm("UpdatePrice", "InvestmentRecord", FormMethod.Get, new { id = "indexItem" }))
-                        {
-                            <input type="hidden" name="investment" value="@item.Name" />
-                            <input name="share_price" value=@item.SharePrice
-                                    onchange="javascript:document.getElementById('indexItem').submit()" />
-                        }
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.NetSellingValue)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ProfitLoss)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.MonthChangeRatio)
-                    </td>
-                    <td>
-                        <input type="hidden" id="tradeNameValue" value="@item.Name" />
-                        <ul class="nav nav-tabs">
-                            <li>
-                                <div class="btn btn-sm editTradeButton" data-toggle="modal" data-target="#myModal" value="@item.Name">
-                                    Edit
-                                </div>
-                            </li>
-                            <li><div href="@Url.Action("Delete", "InvestmentRecord", item)" class="btn btn-sm">Delete</div></li>
-                        </ul>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-    @Html.Partial("~/Views/InvestmentRecord/AddModalDialog.cshtml")
+    <div ng-app="InvestmentRecord" ng-controller="PortfolioController">
+        @Html.Partial("~/Views/InvestmentRecord/AccountSummary.cshtml")
+        <div class="row" style="height:600px">
+            <div ag-grid="gridOptions" style="height: 100%;width:100%;" class="ag-fresh"></div>
+            @*<div ag-grid="gridOptions" class="ag-fresh" style="height: 100%;"></div>*@
+        </div>
+    </div>
 </div>
